--- a/site/app/views/Application/index.html
+++ b/site/app/views/Application/index.html
@@ -1,4 +1,33 @@
-#{extends 'main.html' /}
-#{set title:'Home' /}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    
+    <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
+    <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
+    
+    <script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAopy9pygs2h40C94HY7elt7ftcIjrt__g&sensor=false"></script>
+    
+    <script type="text/javascript">
+      function initialize() {
+        var mapOptions = {
+          center: new google.maps.LatLng(37.09024, -95.712891),
+          zoom: 5,
+          noClear: true
+        };
+        var map = new google.maps.Map(document.getElementById("map-canvas"),
+            mapOptions);
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
+  </head>
+  <body>
+    <div id="map-canvas">
+    	<div id="overlay"/>
+    </div>
+    <script type="text/javascript">
 
-#{welcome /}
+    </script>
+  </body>
+</html>
