--- a/site/app/views/Application/index.html
+++ b/site/app/views/Application/index.html
@@ -24,10 +24,14 @@
   </head>
   <body>
     <div id="map-canvas">
-    	<div id="overlay"/>
+    	
     </div>
-    <script type="text/javascript">
-
-    </script>
+    
+    <div id="overlay">
+   	</div>
+   	
+   	<div id="top-layer">
+   		<input id="search-box" value="abc">
+   	</div>
   </body>
 </html>
