--- a/site/public/stylesheets/main.css
+++ b/site/public/stylesheets/main.css
@@ -24,3 +24,16 @@ body {
 	left: 0;
 	position: fixed;
 }
+
+#top-layer {
+	width: 100%;
+	height: 100%;
+	z-index: 10;
+	top: 0;
+	left: 0;
+	position: fixed;
+}
+
+#search-box {
+	
+}
