--- a/site/app/views/Application/index.html
+++ b/site/app/views/Application/index.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    
-    <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
-    <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
-    
-    <script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAopy9pygs2h40C94HY7elt7ftcIjrt__g&sensor=false"></script>
-    
-    <script type="text/javascript">
-      function initialize() {
-        var mapOptions = {
-          center: new google.maps.LatLng(37.09024, -95.712891),
-          zoom: 5,
-          noClear: true
-        };
-        var map = new google.maps.Map(document.getElementById("map-canvas"),
-            mapOptions);
-      }
-      google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
-  </head>
-  <body>
-    <div id="map-canvas">
-    	
-    </div>
-    
-    <div id="overlay">
-   	</div>
-   	
-   	<div id="top-layer">
-   		<input id="search-box" value="abc">
-   	</div>
-  </body>
+<head>
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+
+<link rel="stylesheet" media="screen"
+	href="@{'/public/stylesheets/main.css'}">
+<link rel="stylesheet" media="screen"
+	href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link rel="shortcut icon" type="image/png"
+	href="@{'/public/images/favicon.png'}">
+
+<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}"
+	type="text/javascript"></script>
+<script type="text/javascript"
+	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAopy9pygs2h40C94HY7elt7ftcIjrt__g&sensor=false"></script>
+<script type="text/javascript" src="@{'/public/javascripts/index.js'}"></script>
+
+</head>
+<body>
+	<div id="map-canvas">
+		<div id="overlay"></div>
+	</div>
+
+	<div id="search-box" class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3">
+		<div class="input-group">
+			<input id="search-input" type="text" class="form-control">
+			<span class="input-group-btn">
+				<button id="search-button" class="btn btn-default" type="button">Search</button>
+			</span>
+		</div>
+	</div>
+</body>
 </html>
