--- a/site/public/stylesheets/main.css
+++ b/site/public/stylesheets/main.css
@@ -9,31 +9,38 @@ body {
 }
 
 #map-canvas {
+	width: 100%;
 	height: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	z-index: 10;
+	
 	-webkit-filter: blur(7px);
 	filter: blur(7px);
 }
 
 #overlay {
-	opacity: 0.5;
+	opacity: 0.6;
 	background: #FFF;
 	width: 100%;
 	height: 100%;
-	z-index: 10;
 	top: 0;
 	left: 0;
 	position: fixed;
+	z-index: 11;
 }
 
-#top-layer {
+#ui-layer {
 	width: 100%;
 	height: 100%;
-	z-index: 10;
 	top: 0;
 	left: 0;
 	position: fixed;
+	z-index: 12;
 }
 
 #search-box {
-	
+	position: fixed;
+	z-index: 12;
 }
