--- a/site/app/views/Application/index.html
+++ b/site/app/views/Application/index.html
@@ -10,25 +10,25 @@
 <link rel="shortcut icon" type="image/png"
 	href="@{'/public/images/favicon.png'}">
 
-<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}"
+<script src="@{'/public/javascripts/jquery-1.11.0.min.js'}"
 	type="text/javascript"></script>
 <script type="text/javascript"
 	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAopy9pygs2h40C94HY7elt7ftcIjrt__g&sensor=false"></script>
+<script type="text/javascript"
+	src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="@{'/public/javascripts/index.js'}"></script>
 
 </head>
 <body>
+	<div id="info-box"></div>
+
 	<div id="map-canvas">
 		<div id="overlay"></div>
 	</div>
 
-	<div id="search-box" class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3">
-		<div class="input-group">
-			<input id="search-input" type="text" class="form-control">
-			<span class="input-group-btn">
-				<button id="search-button" class="btn btn-default" type="button">Search</button>
-			</span>
-		</div>
+	<div id="search-box"
+		class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3">
+		<input id="search-input" type="text" class="form-control" placeholder="Search films or locations">
 	</div>
 </body>
 </html>
