--- a/site/public/stylesheets/main.css
+++ b/site/public/stylesheets/main.css
@@ -9,11 +9,11 @@ body {
 }
 
 #map-canvas {
-	width: 100%;
-	height: 100%;
 	top: 0;
+	bottom: 0;
 	left: 0;
-	position: fixed;
+	right: 0;
+	position: absolute;
 	z-index: 10;
 	
 	-webkit-filter: blur(7px);
@@ -23,24 +23,24 @@ body {
 #overlay {
 	opacity: 0.6;
 	background: #FFF;
-	width: 100%;
-	height: 100%;
 	top: 0;
+	bottom: 0;
 	left: 0;
-	position: fixed;
+	right: 0;
+	position: absolute;
 	z-index: 11;
-}
-
-#ui-layer {
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	position: fixed;
-	z-index: 12;
 }
 
 #search-box {
 	position: fixed;
 	z-index: 12;
+}
+
+#info-box {
+	background: #06C;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	width: 0;
+	position: absolute;
 }
