--- a/site/app/views/Application/index.html
+++ b/site/app/views/Application/index.html
@@ -26,9 +26,8 @@
 		<div id="overlay"></div>
 	</div>
 
-	<div id="search-box"
-		class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3">
-		<input id="search-input" type="text" class="form-control" placeholder="Search films or locations">
+	<div id="search-box">
+		<input id="search-input" type="text" class="form-control" placeholder="Search films or locations"/>
 	</div>
 </body>
 </html>
