--- a/site/app/views/Application/index.html
+++ b/site/app/views/Application/index.html
@@ -3,19 +3,13 @@
 <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
-<link rel="stylesheet" media="screen"
-	href="@{'/public/stylesheets/main.css'}">
-<link rel="stylesheet" media="screen"
-	href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<link rel="shortcut icon" type="image/png"
-	href="@{'/public/images/favicon.png'}">
+<link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
+<link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
 
-<script src="@{'/public/javascripts/jquery-1.11.0.min.js'}"
-	type="text/javascript"></script>
-<script type="text/javascript"
-	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAopy9pygs2h40C94HY7elt7ftcIjrt__g&sensor=false"></script>
-<script type="text/javascript"
-	src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="@{'/public/javascripts/jquery-1.11.0.min.js'}"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAopy9pygs2h40C94HY7elt7ftcIjrt__g&sensor=false"></script>
+<script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="@{'/public/javascripts/index.js'}"></script>
 
 </head>
@@ -28,6 +22,7 @@
 
 	<div id="search-box">
 		<input id="search-input" type="text" class="form-control" placeholder="Search films or locations"/>
+		<div id="search-suggestion"></div>
 	</div>
 </body>
 </html>
