--- a/site/public/stylesheets/main.css
+++ b/site/public/stylesheets/main.css
@@ -49,3 +49,19 @@ body {
 	left: 200px;
 	right: 200px;
 }
+
+#search-suggestion {
+	max-height: 300px;
+	margin-top: 4px;
+    padding: 8px 0;
+    background-color: #FFF;
+    border: 1px solid #CCC;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 3px 3px rgba(0,0,0,.2);
+    -moz-box-shadow: 0 3px 3px rgba(0,0,0,.2);
+    box-shadow: 0 3px 3px rgba(0,0,0,.2);
+    display: none;
+}
