--- a/site/css/main.css
+++ b/site/css/main.css
@@ -50,18 +50,26 @@ body {
 	right: 200px;
 }
 
+.search-input-with-suggestion {
+    -webkit-border-radius: 4px 4px 0 0 !important;
+    -moz-border-radius: 4px 4px 0 0 !important;
+    border-radius: 4px 4px 0 0 !important;
+}
+
 #search-suggestion {
-	max-height: 300px;
-	margin-top: 4px;
+	height: 300px;
     padding: 8px 0;
     background-color: #FFF;
+    
     border: 1px solid #CCC;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
+    border-top: none;
+    -webkit-border-radius: 0 0 4px 4px;
+    -moz-border-radius: 0 0 4px 4px;
+    border-radius: 0 0 4px 4px;
+    
     -webkit-box-shadow: 0 3px 3px rgba(0,0,0,.2);
     -moz-box-shadow: 0 3px 3px rgba(0,0,0,.2);
     box-shadow: 0 3px 3px rgba(0,0,0,.2);
+    
     display: none;
 }
