--- a/site/css/main.css
+++ b/site/css/main.css
@@ -57,7 +57,8 @@ body {
 }
 
 #search-suggestion {
-	height: 300px;
+	max-height: 700px;
+    overflow-y: auto;
     padding: 8px 0;
     background-color: #FFF;
     
@@ -72,4 +73,28 @@ body {
     box-shadow: 0 3px 3px rgba(0,0,0,.2);
     
     display: none;
+}
+
+#search-suggestion li {
+    height: 90px;
+    cursor: pointer;
+}
+
+#search-suggestion li:hover {
+    background-color: #0097CF;
+    color: #FFF;
+}
+
+.suggestion-item {
+    height: 90px;
+}
+
+.suggestion-inline-helper {
+    display: inline-block;
+    height: 100%;
+    width: 10px;
+    vertical-align: middle;
+}
+
+.suggestion-item img {
 }
