--- a/site/css/main.css
+++ b/site/css/main.css
@@ -72,6 +72,8 @@ body {
     -moz-box-shadow: 0 3px 3px rgba(0,0,0,.2);
     box-shadow: 0 3px 3px rgba(0,0,0,.2);
     
+    list-style-type: none;
+    
     display: none;
 }
 
@@ -97,7 +99,7 @@ body {
 }
 
 #location-list {
-    top: 250px;
+    top: 320px;
     bottom: 0;
     position: absolute;
     margin-bottom: 0;
@@ -112,10 +114,16 @@ body {
 
 #movie-image {
     float: left;
+    margin: 8px;
+}
+
+#movie-name-and-rate {
+    margin-left: 15px;
+    margin-top: 20px;
+    height: 250px;
+    
+    font-size: 24px;
 }
 
 #movie-intro-box {
-    float: left;
-    margin-left: 15px;
-    margin-top: 20px;
 }
