--- a/site/css/main.css
+++ b/site/css/main.css
@@ -142,19 +142,23 @@ body {
     padding-left: 0;
 }
 
-#location-list li {
-    height: 120px;
+.location-entry {
     cursor: pointer;
     border-bottom: 1px solid #DDD;
 }
 
-.location-list-inline-helper {
-    display: inline-block;
-    height: 100%;
-    width: 10px;
-    vertical-align: middle;
+.location-entry:hover {
+    background-color: #FAFAFA;
 }
 
-#location-list li:hover {
-    background-color: #FAFAFA;
+.location-entry div {
+    height: 50px;
+    margin-left: 10px;
+    margin-right: 30px;
+    display: table;
+}
+
+.location-entry p {
+    display: table-cell;
+    vertical-align: middle;
 }
